# llm-eval-kit

./: README.md  pyproject.toml
.github/workflows/: eval.yml
docs/assets/: README.md
examples/busyboy_case_study/: README.md
fixtures/: baseline.json
src/claude_eval/: replay.py
src/llm_eval/: __init__.py  cli.py  judge.py  replay.py  report.py  rubric.py
tests/: test_judge.py  test_report.py
