[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-kit"
version = "0.1.0"
description = "Lightweight LLM-as-judge framework for evaluating an LLM's responses with pluggable rubric, replay mode, and CI integration. Judge model swappable via --model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tsukasa Akiyama" }]
keywords = ["llm", "evaluation", "judge", "eval", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.50,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1",
    "ruff>=0.5",
]

[project.scripts]
llm-eval = "llm_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
